# sentinel-fraud-pipeline

./: .env.example  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  gitattributes  gitignore  pyproject.toml  pytest.ini  requirements.txt
docker/spark/: log4j2.properties  spark-defaults.conf
docs/: PROMPT.md
scripts/: health_check.sh
src/: __init__.py
src/consumers/: __init__.py  bronze_consumer.py
src/ml/: __init__.py
src/producer/: __init__.py  transaction_producer.py
src/transformations/: __init__.py  silver_job.py
tests/: conftest.py
tests/transformations/: test_silver_job.py
