[project]
name = "sentinel-fraud-pipeline"
version = "0.1.0"
description = "Real-time credit-card fraud detection pipeline (Kafka -> Spark/Delta -> MLflow -> Airflow -> Grafana)."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
